<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/frame"
                android:src="@drawable/logo" />

            <Button
                android:id="@+id/main_add_event_button"
                style="@style/core_ButtonText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/core_bg_button_yellow"
                android:text="@string/main_add_event"
                android:textSize="25sp" />

            <!-- <Button -->
            <!-- android:id="@+id/main_event_history_button" -->
            <!-- style="@style/core_ButtonText" -->
            <!-- android:layout_width="fill_parent" -->
            <!-- android:layout_height="wrap_content" -->
            <!-- android:layout_marginTop="40dp" -->
            <!-- android:background="@drawable/core_bg_button_yellow" -->
            <!-- android:text="@string/main_event_hisotry" -->
            <!-- android:textSize="25sp" -->
            <!-- android:visibility="visible" /> -->

            <Button
                android:id="@+id/main_add_review_button"
                style="@style/core_ButtonText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/core_bg_button_yellow"
                android:text="@string/main_add_review"
                android:textSize="25sp" />

            <Button
                android:id="@+id/main_call_button"
                style="@style/core_ButtonText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/core_bg_button_yellow"
                android:text="@string/main_call"
                android:textSize="25sp" />

            <Button
                android:id="@+id/main_email_button"
                style="@style/core_ButtonText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/core_bg_button_yellow"
                android:text="@string/main_email"
                android:textSize="25sp" />

            <Button
                android:id="@+id/main_map_button"
                style="@style/core_ButtonText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/core_bg_button_yellow"
                android:text="@string/main_map"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="15dp"
                android:text="@string/main_credits"
                android:textSize="8sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>